# Gaussian-3D-Imaging

./: .gitignore  00_BUILD_SPECIFICATION.md  KICKOFF.md  README.md  orchestrate.py
.claude/: settings.json
common/: README.md  __init__.py  colmap_io.py  conventions.py  file_layout.py  orientation_selftest.py  plyio.py  pyproject.toml
config/: pipeline.yaml  pipeline_a6000.yaml  pipeline_a6000_depth0.yaml  pipeline_a6000_depth0_iso_flat.yaml  pipeline_a6000_depth0_isolated.yaml  pipeline_a6000_lowdensity.yaml  pipeline_a6000_meshlowres.yaml  pipeline_a6000_nomesh.yaml  pipeline_a6000_quality.yaml  pipeline_a6000_quality_depth0.yaml  pipeline_a6000_quality_l005.yaml  pipeline_ab_noiso.yaml  pipeline_ab_prune.yaml  pipeline_flatness_ab.yaml  pipeline_gl_r1.yaml  pipeline_gl_r1_dca.yaml  pipeline_recommended.yaml
docs/: AGENT_GUIDE.md  Additional Context.txt  CAPTURE_GUIDANCE.md  CAPTURE_MODES_FINDINGS.md  CAPTURE_PROTOCOL_V2.md  COMPONENT_IO_REFERENCE.md  DAILY_NOTES.md  DECISION_REVIEW.md  DOMAIN_LAYER.md  EXPERIMENTS_BACKLOG.md  Full context.txt  MEASUREMENT_LITERATURE.md  MESH_EXPORT_SPEC.md  MILO_PLAN.md  PIPELINE_JOURNAL.md  PIPELINE_RECOMMENDATION.md  POSE_BA_PLAN.md  POWER_MANAGEMENT.md  REFERENCE_SCAN_PROTOCOL.md  RESULTS.md  STAGE45_PLAN.md  SWEEP_RESULTS.md  TASK_T4_HIGHRES_CAPTURE.md  TECH_ROADMAP.md  VALIDATION_CAPTURE_PROTOCOL.md  _capture_modes_workflow_raw.json
experiments/: README.md  experiment_a_single_scale.py  experiment_b_normal_prior.py
io_contracts/: README.md  capture_session.md  frontend_output.md  metric_output.md  normals_output.md  (+1 more)
(+100 files in other folders)
